tests/security/taintThroughAwait/output.txt
ERROR: TaintedData - input.hack:6:10 - Data from a URL query string found its way to an HTML tag